--- a/unknown.html
+++ b/unknown.html
@@ -2,7 +2,6 @@
 <html>
     <head>
         <title>Love will tear us apart again</title>
-        <script type="text/javascript" src="js/vendor/jquery.min.js"></script>
         <script type="text/javascript" src="js/eddy.js"></script>
         <script type="text/javascript" src="http://d3js.org/d3.v2.min.js"></script>
         <style type="text/css">
@@ -29,7 +28,7 @@
 
             #filters .filter .graph {
                 position: relative;
-                height: 24px;
+                height: 20px;
                 width: 400px;
             }
 
@@ -66,15 +65,15 @@
 
         <script type="text/javascript">
 
-            var loader = new Eddy.Loader({
-                baseURL: "http://vma-twittertracker.mtv.com/",
-                lastURI: "history-20110829/06/0033.jsonp"
+            var loader = eddy.loader({
+                baseURL: "http://twittertracker.mtv.com/",
+                lastURI: "history-last.jsonp"
             });
 
             loader.on("load", function(data) {
                 if (data.history) {
-                    console.info("got data!", data);
-                    Eddy.Data.prepareFilters(data);
+                    // console.info("got data!", data);
+                    eddy.unpack.filters(data);
                     update(data);
                 } else {
                     console.warn("no data yet...");
@@ -96,7 +95,7 @@
 
             var formatTweets = d3.format(",0");
 
-            var sum = Eddy.Util.sum;
+            var sum = eddy.util.sum;
 
             var updated = false;
             function update(data) {
