--- a/examples/unknown.html
+++ b/examples/unknown.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Love will tear us apart again</title>
-        <script type="text/javascript" src="js/eddy.js"></script>
+        <script type="text/javascript" src="../eddy.js"></script>
         <script type="text/javascript" src="http://d3js.org/d3.v2.min.js"></script>
         <style type="text/css">
             body {
