--- a/examples/unknown.html
+++ b/examples/unknown.html
@@ -3,7 +3,7 @@
     <head>
         <title>Love will tear us apart again</title>
         <script type="text/javascript" src="../eddy.js"></script>
-        <script type="text/javascript" src="http://d3js.org/d3.v2.min.js"></script>
+        <script type="text/javascript" src="js/vendor/d3.v2.min.js"></script>
         <style type="text/css">
             body {
                 font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
