Promoted eddy.timeline to /, +eddy.kitchensink
eddy.timeline.js now lives at the top level of the project, and a
minified version gets built in the Makefile.

eddy.kitchensink.js and its minified version are concatenated scripts
containing eddy.js, d3, and Raphael. We may integrate Sammy later if it
proves useful for URL handling.

--- a/timeline/timeline-allshows.html
+++ b/timeline/timeline-allshows.html
@@ -2,11 +2,11 @@
 <html>
     <head>
         <title>eddy.js timeline</title>
-        <script src="../eddy.js"></script>
-        <script src="../eddy.archive.js"></script>
         <script src="../examples/js/vendor/raphael.min.js"></script>
         <script src="../examples/js/vendor/d3.v2.min.js"></script>
-        <script src="eddy.timeline.js"></script>
+        <script src="../eddy.js"></script>
+        <script src="../eddy.archive.js"></script>
+        <script src="../eddy.timeline.js"></script>
         <style type="text/css">
 
             body {
