moved examples/js/vendor -> lib

--- a/timeline/timeline-allshows.html
+++ b/timeline/timeline-allshows.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>eddy.js timeline</title>
-        <script src="../examples/js/vendor/raphael.min.js"></script>
-        <script src="../examples/js/vendor/d3.v2.min.js"></script>
+        <script src="../lib/raphael.min.js"></script>
+        <script src="../lib/d3.v2.min.js"></script>
         <script src="../eddy.js"></script>
         <script src="../eddy.archive.js"></script>
         <script src="../eddy.timeline.js"></script>
