--- a/examples/timeline-allshows.html
+++ b/examples/timeline-allshows.html
@@ -5,8 +5,8 @@
         <script src="../lib/raphael.min.js"></script>
         <script src="../lib/d3.v2.min.js"></script>
         <script src="../eddy.js"></script>
-        <script src="../eddy.archive.js"></script>
         <script src="../eddy.timeline.js"></script>
+        <script src="../goodies/eddy.archive.js"></script>
         <style type="text/css">
 
             body {
