--- a/examples/timeline.html
+++ b/examples/timeline.html
@@ -5,7 +5,7 @@
         <script src="../lib/raphael.min.js"></script>
         <script src="../lib/d3.v2.min.js"></script>
         <script src="../eddy.js"></script>
-        <script src="../eddy.timeline.js"></script>
+        <script src="../goodies/eddy.timeline.js"></script>
         <style type="text/css">
 
             body {
