--- a/examples/timeline-allshows.html
+++ b/examples/timeline-allshows.html
@@ -111,6 +111,8 @@
                     "lastURI": qs.last || show.historyURI
                 });
 
+            var commify = d3.format(",0");
+
             var timeline = eddy.timeline({
                 "parent":           "#timeline",
                 "smooth":           qs.smooth || "monotone",
@@ -122,6 +124,10 @@
             .autoSize()
             .on("select", function(time, lastSelected) {
                 // console.log("selected time:", time, lastSelected);
+                filterList.selectAll(".count")
+                    .text(function(filter) {
+                        return commify(filter.countsByTime[time]);
+                    });
             });
 
             var prevLink = d3.select("#prev"),
@@ -138,7 +144,7 @@
                     eddy.unpack.filters(data);
 
                     // console.log("updating timeline...", data.history);
-                    timeline.update(data, true);
+                    timeline.update(data, false);
 
                     updateFilterItems(data.filters);
 
@@ -168,6 +174,10 @@
                     .attr("href", function(filter) {
                         return "#" + filter.id;
                     });
+                entering.append("span")
+                    .text(" ")
+                    .append("span")
+                        .attr("class", "count");
                 items.select("a")
                     .text(function(filter) {
                         return filter.name;
