examples now with aight

--- a/examples/timeline-allshows.html
+++ b/examples/timeline-allshows.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>eddy.js timeline</title>
+        <script src="../lib/aight.min.js"></script>
         <script src="../lib/raphael.min.js"></script>
         <script src="../lib/d3.v2.min.js"></script>
         <script src="../eddy.js"></script>
@@ -113,8 +114,6 @@
                     "lastURI": qs.last || show.historyURI
                 });
 
-            var commify = d3.format(",0");
-
             var timeline = eddy.timeline({
                 "parent":           "#timeline",
                 "smooth":           qs.smooth || "monotone",
@@ -127,18 +126,12 @@
             .addKeyHandlers(document.documentElement)
             .on("select", function(time, lastSelected) {
                 // console.log("selected time:", time, lastSelected);
-                filterList.selectAll(".count")
-                    .text(function(filter) {
-                        var count = filter.countsByTime[time];
-                        // console.log(filter.name, "@", time, count);
-                        return commify(count || 0);
-                    });
             });
 
             var prevLink = d3.select("#prev"),
                 nextLink = d3.select("#next"),
                 timeLinks = d3.selectAll("#prev, #next").on("click", function(href) {
-                    // console.log("loading:", href);
+                    console.log("loading:", href);
                     loader.load(href);
                     d3.event.preventDefault();
                     return false;
@@ -148,10 +141,10 @@
                 if (data.history) {
                     eddy.unpack.filters(data);
 
-                    updateFilterItems(data.filters);
-
                     // console.log("updating timeline...", data.history);
                     timeline.update(data, false);
+
+                    updateFilterItems(data.filters);
 
                     if (data.next) nextLink.datum(data.next.href);
                     if (data.prev) prevLink.datum(data.prev.href);
@@ -179,10 +172,6 @@
                     .attr("href", function(filter) {
                         return "#" + filter.id;
                     });
-                entering.append("span")
-                    .text(" ")
-                    .append("span")
-                        .attr("class", "count");
                 items.select("a")
                     .text(function(filter) {
                         return filter.name;
