--- a/examples/timeline.html
+++ b/examples/timeline.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>eddy.js timeline</title>
+        <script src="../lib/aight.min.js"></script>
         <script src="../lib/raphael.min.js"></script>
         <script src="../lib/d3.v2.min.js"></script>
         <script src="../eddy.js"></script>
